--- a/F1nalLap/src/app/pages/ranking/ranking.component.scss
+++ b/F1nalLap/src/app/pages/ranking/ranking.component.scss
@@ -125,7 +125,8 @@
 .race-card {
   display: flex;
   flex-direction: column;
-  align-items: center; /* centrado opcional */
+  align-items: center;
+  padding-bottom: 25px;
 }
 
 .divider {
@@ -137,8 +138,11 @@
 
 .race-card img {
   box-shadow: none;
+  max-width: 200px;
 }
 
 .race-card ul {
   list-style: none;
 }
+
+
