Mostrar en dialogo resultado de carreras de la temporada actual

--- a/F1nalLap/src/app/pages/ranking/ranking.component.html
+++ b/F1nalLap/src/app/pages/ranking/ranking.component.html
@@ -159,6 +159,7 @@
                         </li>
                       </ul>
                     </div>
+                    <button (click)="openDialog(r.round, r.race)">Mostrar Resultado</button>
                   </ng-container>
                   <ng-container *ngIf="r.podium.length == 0">
                     <div class="podium">
