Cambios en JSON de Equipos y añadimos una página para comparar las estadísticas de pilotos y equipos por temporadas

--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -44,6 +44,7 @@
           </button>
         </mat-menu>
 
+        <a mat-button href="comparar">Análisis</a>
         <a mat-button href="circuits">Simulador</a>
       </nav>
 
