--- a/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
+++ b/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
@@ -34,6 +34,7 @@
           </button>
         </mat-menu>
 
+        <a mat-button href="comparar">Análisis</a>
         <a mat-button href="circuits">Simulador</a>
       </nav>
 
