--- a/F1nalLap/src/app/pages/circuits/circuits.component.scss
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  grid-template-columns: none; 
+  grid-template-columns: none;
 }
 
 .tarjetas-contenedor.seleccionado .tarjeta {
@@ -65,6 +65,7 @@
 
     .boton {
       display: inline-block;
+      width: 80px;
       margin-top: 0.5rem;
       margin-left: 0.5rem;
       padding: 0.5rem 1rem;
@@ -90,22 +91,45 @@
 }
 
 @media (max-width: 768px) {
-    
   .tarjetas-contenedor {
-    grid-template-columns: repeat(1, 1fr); // 2 columnas en pantallas pequeñas
+    grid-template-columns: 1fr; // 1 columna en móviles
+    padding: 1rem;
+    gap: 1rem;
+  }
+  .estrategias {
+    grid-template-columns: 1fr !important;
+    gap: 1rem;
+    font-size: 12px;
+  }
+  .tarjetas-contenedor.seleccionado .tarjeta {
+    width: 100%;
+    min-width: unset;
+    img {
+      max-width: 100%;
+    }
+  }
+
+  .boton {
+    font-size: 12px;
+  }
+
+  span {
+    font-size: 11px;
   }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    
-    .tarjetas-contenedor {
-      grid-template-columns: repeat(2, 1fr); // 2 columnas en pantallas pequeñas
-    }
+  .tarjetas-contenedor {
+    grid-template-columns: repeat(2, 1fr); // 2 columnas en tablets
+    gap: 1.5rem;
   }
+  .estrategias {
+    grid-template-columns: repeat(2, 1fr); // 2 columnas para estrategias en tablets
+    gap: 1rem;
+  }
+}
 
-  
-
-  /* Botones */
+/* Botones */
 .buttons {
   text-align: center;
   margin-bottom: 1.5rem;
@@ -157,12 +181,9 @@ h3 {
   gap: 1.5rem;
 }
 
-li {
-  list-style: none;
-}
-
 #volver {
-  width: 50px;
+  width: 55px;
+  height: 40px;
   margin: 0;
   margin-top: 0;
   margin-bottom: 3rem;
@@ -172,6 +193,7 @@ li {
   background-color: rgb(163, 21, 21);
   padding-left: 0;
   padding-right: 0;
+  border: none;
 
   &:hover {
     background-color: rgb(216, 0, 0);
@@ -183,4 +205,9 @@ li {
   max-width: 40px;
   margin: 0;
   padding: 0;
+}
+
+.vueltas {
+  margin-left: 25px;
+  max-width: 120px;
 }
