--- a/F1nalLap/src/app/pages/comparar/comparar.component.scss
+++ b/F1nalLap/src/app/pages/comparar/comparar.component.scss
@@ -53,6 +53,12 @@ table tr:nth-child(even) {
   .selectors {
     grid-template-columns: repeat(1, 100%);
   }
+  .grafico-pie,
+  ngx-charts-pie-chart,
+  ngx-charts-bar-vertical,
+  ngx-charts-line-chart {
+    margin-left: -20px !important;
+  }
 }
 
 @media (max-width: 400px) {
@@ -123,5 +129,74 @@ button.limpiar:focus,
   padding: 0 .5rem;
   margin-top: 1rem;
 }
+
+.graficos-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  
+  align-items: center;      
+  gap: 5rem; 
+  padding: 0 1rem;        
+  margin: 0 auto;   
+  margin-bottom: 5rem;        
+  width: 100%;              
+}
+
+
+.grafico-pie {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grafico-pie-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titulo-grafico {
+  margin-bottom: 0.5rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+::ng-deep .grafico-pie .legend {
+  display: flex !important;
+  justify-content: center !important;
+  width: 100%;
+}
+
+::ng-deep .grafico-pie .legend-labels {
+  display: flex !important;
+  justify-content: center !important;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 1.5rem;
+}
+
+::ng-deep .grafico-pie .legend-label {
+  text-align: center !important;
+  min-width: 80px;
+}
+
+.spinner {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border: 3px solid #da0000;
+  border-radius: 50%;
+  border-top: 3px solid transparent;
+  animation: spin 1s linear infinite;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
+
+
 
 
