Cambio en el selector de temporada

--- a/F1nalLap/src/app/pages/comparar/comparar.component.html
+++ b/F1nalLap/src/app/pages/comparar/comparar.component.html
@@ -67,7 +67,7 @@
       <section>
         <h2>Análisis por Temporada</h2>
         <div class="buttons">
-          <mat-form-field appearance="fill" class="temporada">
+          <mat-form-field appearance="fill" class="temporada" hideRequiredMarker="true">
             <mat-label>Temporada</mat-label>
             <input
               type="number"
